css/styles.css
/* ... */
.timeline-item:nth-child(odd) {
  border-right: 2px dashed var(--clr-primary-5);
  border-top-right-radius: 2rem;
  border-bottom-right-radius: 2rem;
  margin-left: 2rem;
  padding-left: 0;
}
.timeline-item:first-child {
  border-top: 0;
  border-top-right-radius: 0;
}
.timeline-item:last-child {
  border-bottom-left-radius: 0;
}
.number {
  position: absolute;
  top: 50%;
  transform: translate(-50%, -50%);
  margin-bottom: 0;
  background: var(--clr-primary-5);
  width: 2rem;
  height: 2rem;
  border-radius: 50%;
  display: grid;
  place-items: center;
  color: var(--clr-primary-1);
  font-weight: bold;
}
.timeline-item:nth-child(even) .number {
  left: 0;
}
.timeline-item:nth-child(odd) .number {
  right: 0;
  transform: translate(50%, -50%);
}
/*
=============== 
Blog
===============
*/
.blog {
  justify-content: center;
  align-items: center;
  background: var(--clr-grey-8);
}
.teminalial_image {
  background-blend-mode: color;
  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
    url("/images/team1.jpg") top/cover no-repeat fixed;
}
.card {
  height: 27rem;
  position: relative;
  perspective: 1500px;
  transform-style: preserve-3d;
  background: transparent;
  overflow: hidden;
}

.card-side {
  transition: all 2s linear;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border-radius: var(--radius);
  transform: translate3d(0, 0, 0);
  visibility: visible;
}
.card-front {
  background: var(--clr-white);
  transform-style: preserve-3d;
}
.card-back {
  background: var(--clr-primary-1);
  transform: rotateY(180deg);
  display: grid;
  color: var(--clr-white);
  place-items: center;
  transform-style: preserve-3d;
}
.card-back .card-back-info {
  color: var(--clr-white);
  margin: auto;
  padding: 1rem;
  font-style: italic;
  opacity: 0.8;
  overflow: hidden;
  transform-style: preserve-3d;
  transform: var(--level-one);
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
}
.card-back-info::first-letter {
  font-size: 1.2rem;
  background: transparentf;
  text-transform: capitalize;
  -webkit-text-decoration: wavy rgb(255, 255, 255) 0.2rem;
  text-decoration: wavy rgb(255, 255, 255) 0.2rem;
  font-family: "Courier New", Courier, monospace;
  padding: 0.3rem;
  border-radius: 5%;
  box-shadow: inset 2px 0px 1px rgb(0, 0, 0, 0.5);
}
.card:hover .card-back-info {
  transform: var(--level-one);
}
.card:hover {
  transform: translateZ(5rem);
  transform-style: preserve-3d;
}
.card:hover .card-front {
  transform: rotateY(-180deg);
}
.card:hover .card-back {
  transform: rotateY(0);
}
/* rest of the styles */
.card-info {
  padding: 1rem 1.5rem;
  transform-style: preserve-3d;
  transform: translateZ(1rem);
}
.card-info h4 {
  color: var(--clr-primary-4);
}
.card-front img {
  height: 13rem;
  -o-object-fit: cover;
  object-fit: cover;
  transform-style: preserve-3d;
  transform: translateZ(1rem);
  border-top-left-radius: var(--radius);
  border-top-right-radius: var(--radius);
}

.card:hover img,
.card-info {
  transform: var(--level-one);
  box-shadow: 2px 0px 14px rgb(0, 0, 0, 0.5);
}
.card-info h4 {
  transform: var(--level-two);
}
.card-footer {
  display: grid;
  grid-template-columns: auto 1fr;
  align-items: center;
  transform-style: preserve-3d;
}
.card-footer img {
  width: 2rem;
  height: 2rem;
  -o-object-fit: cover;
  object-fit: cover;
  border-radius: 50%;
  transform-style: preserve-3d;
}
.card-footer p {
  margin-bottom: 0;
  text-transform: uppercase;
  justify-self: end;
  color: var(--clr-primary-4);
  font-size: 0.85rem;
  transform-style: preserve-3d;
}
.blog-center {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(330px, 1fr));
  gap: 3rem;
  place-self: center;
}
/* ==================================================================== */
.single-page {
  background: var(--clr-primary-10);
  min-height: calc(100vh - 5rem - 198px);
}
.page-info {
  max-width: 700px;
}
.page-info a {
  text-transform: uppercase;
  color: var(--clr-primary-5);
  transition: var(--transition);
  transform-style: preserve-3d;
}
.page-info a:hover {
  color: var(--clr-primary-1);
}

/*
=============== 
Products Page
===============
*/
.projects-hero {
  height: 40vh;
  background: var(--clr-primary-10);
  display: grid;
  place-items: center;
}
.projects-hero .section-title {
  margin-bottom: 0;
}
.single-project {
  background: var(--clr-grey-10);
  border-radius: var(--radius);
}
.project-container img {
  border-top-left-radius: var(--radius);
  border-top-right-radius: var(--radius);
}
.project-container {
  position: relative;
}
.project-icon {
  position: absolute;
  font-size: 1.75rem;
  bottom: 0;
  left: 50%;
  transform: translate(-50%, 50%);
  width: 4rem;
  height: 4rem;
  display: grid;
  place-items: center;
  background: var(--clr-primary-5);
  border-radius: 50%;
  color: var(--clr-primary-1);
  border: 0.375rem solid var(--clr-grey-10);
}
.project-details {
  padding: 2rem 1.5rem;
}
.project-footer {
  display: grid;
  grid-template-columns: 1fr 1fr;
  color: var(--clr-primary-5);
}
.project-footer a {
  color: var(--clr-primary-5);
  text-transform: capitalize;
  transition: var(--transition);
  justify-self: end;
}
.project-footer a:hover {
  color: var(--clr-primary-1);
}
.projects-page-center {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(330px, 1fr));
  gap: 3rem 1rem;
}

/* ====  top ==== button */
#myBtn {
  display: flex;
  justify-content: center;
  align-items: center;
  position: fixed;
  bottom: 3%;
  right: 1%;
  text-align: center;
  height: 55px;
  width: 55px;
  font-size: 16px;
  outline: none;
  z-index: 200;
  color: var(--clr-white);
  cursor: pointer;
  padding: 15px;
  border-radius: 50%;
}
/* ... */

